--- a/python-client/pyproject.toml
+++ b/python-client/pyproject.toml
@@ -53,3 +53,14 @@ fixable = ["ALL"]
 
 [tool.ruff.lint.pylint]
 max-args = 6
+
+
+[tool.mypy]
+show_error_context = true # エラー時のメッセージを詳細表示
+show_column_numbers = true # エラー発生箇所の行数/列数を表示
+ignore_missing_imports = true # import 先のチェックを行わない (デフォルトだとサードパーティーライブラリまでチェックする)
+disallow_untyped_defs = true # 関数定義の引数/戻り値に型アノテーション必須
+no_implicit_optional = true # デフォルト引数に None を取る場合型アノテーションに Optional 必須
+warn_return_any = true # 戻り値が Any 型ではない関数の戻り値の型アノテーションが Any のとき警告
+warn_unused_ignores = true # mypy エラーに該当しない箇所に `# type: ignore` コメントが付与されていたら警告
+warn_redundant_casts = true # 冗長なキャストに警告
